--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "PyGithub>=2.1.1",
     "pyjwt>=2.10.1",
     "pynacl>=1.5.0",
+    "azure-identity>=1.24.0",
 ]
 
 [build-system]
