--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "pyjwt>=2.10.1",
     "pynacl>=1.5.0",
     "azure-identity>=1.24.0",
+    "slowapi>=0.1.9",
+    "redis>=5.0.0",
 ]
 
 [build-system]
